--- a/.env.example
+++ b/.env.example
@@ -66,5 +66,7 @@ VITE_APP_NAME="${APP_NAME}"
 
 MONITORING_EMAIL= # Where to receive monitoring emails.
 SENTRY_LARAVEL_DSN=
-SENTRY_TRACES_SAMPLE_RATE=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+HEARTBEAT_URL= # URL to send heartbeat requests to
+HEARTBEAT_INTERVAL=60 # Interval as a cron expression for heartbeat requests
 NOMINATIM_URL= # Nominatim URL for geocoding, without trailing slash
