--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,12 @@
 services:
-    openaed-api:
+    app:
         build:
             context: .
             dockerfile: Dockerfile
         container_name: openaed-api
         restart: unless-stopped
-        environment:
-            APP_ENV: local
-            APP_URL: http://localhost
-            DB_CONNECTION: pgsql
-            DB_HOST: your-db-host.example.com # <-- change this
-            DB_PORT: 5432
-            DB_DATABASE: openaed # <-- change this
-            DB_USERNAME: your-db-user # <-- change this
-            DB_PASSWORD: your-db-password # <-- change this
+        env_file:
+            - .env
         volumes:
             - .:/var/www/html
         ports:
