--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
             - .env
         volumes:
             - .:/var/www/html
+            - /var/www/html/vendor
         ports:
             - "8000:8000"
         command: php artisan serve --host=0.0.0.0 --port=8000
