--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,27 @@ services:
             - .env
         volumes:
             - .:/var/www/html
-            - /var/www/html/vendor
+            - /var/www/html/vendor # prevent local vendor override
         ports:
             - "8000:8000"
         command: php artisan serve --host=0.0.0.0 --port=8000
+
+    scheduler:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: openaed-scheduler
+        restart: unless-stopped
+        env_file:
+            - .env
+        volumes:
+            - .:/var/www/html
+            - /var/www/html/vendor
+        depends_on:
+            - app
+        entrypoint:
+            [
+                "sh",
+                "-c",
+                "while :; do php artisan schedule:run >> /dev/null 2>&1; sleep 60; done",
+            ]
