Add host override for nominatim

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         ports:
             - "8000:8000"
         command: php artisan serve --host=0.0.0.0 --port=8000
+        extra_hosts:
+            - "nominatim.openaed.org:host-gateway"
 
     scheduler:
         build:
@@ -33,3 +35,5 @@ services:
                 "-c",
                 "while :; do php artisan schedule:run >> /dev/null 2>&1; sleep 60; done",
             ]
+        extra_hosts:
+            - "nominatim.openaed.org:host-gateway"
